--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <app-header></app-header>
+  <div class="container">
 <h1>
   {{title}}
 </h1>
+<app-biblio></app-biblio>
+            </div>
+<app-footer></app-footer>
