--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,51 @@
 <app-header></app-header>
   <div class="container">
-<h1>
-  {{title}}
-</h1>
-<app-biblio></app-biblio>
-            </div>
+      <h1>
+        {{title}}
+      </h1>
+               <div class="well">
+                    <h4>Recherche Jeu</h4>
+                    <div class="input-group">
+                        <input type="text" class="form-control">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">
+                                <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                        </span>
+                    </div>
+                </div>
+          
+      <app-biblio></app-biblio>
+             <div class="col-md-4">
+                           <div class="well">
+                    <h4>Blog Categories</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                                <li><a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                 </div>
+                </div>
+  </div>
 <app-footer></app-footer>
