--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<body>
   <div class="container">
       <h1>
         {{title}}
@@ -15,7 +16,6 @@
                     </div>
                 </div>
           
-      <app-biblio></app-biblio>
              <div class="col-md-4">
                            <div class="well">
                     <h4>Blog Categories</h4>
@@ -47,5 +47,7 @@
                     </div>
                  </div>
                 </div>
+
+                <app-biblio></app-biblio>
   </div>
-<app-footer></app-footer>
+</body>
