--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,15 +8,13 @@
 	                <span class="icon-bar"></span>
 	            </button>
 		            <a class="navbar-brand" href="index.php">
-		            	<img alt="Logo" src="img/logo.png">
+		            	<img alt="Logo" src="assets/logo.png">
 		            </a>
 	        </div>
 
 	        <div id="navbarCollapse" class="collapse navbar-collapse">
 	            <ul class="nav navbar-nav">
-			            <li><a href="achat.php"> Store </a></li>
-		                <li><a href="jeux_achetes.php"> Bibliothèque </a></li>  
-		       
+       	 				<li><a href="app/biblio/biblio.component.html">Bibliothèque</a></li>
 			      </ul>
 		     </div>
        </nav>
