--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
       <app-biblio></app-biblio>
              <div class="col-md-4">
                            <div class="well">
-                    <h4>Blog Categories</h4>
+                    <h4>Jeu Categories</h4>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
@@ -46,6 +46,6 @@
                         </div>
                     </div>
                  </div>
-                </div>
+              </div>
   </div>
 <app-footer></app-footer>
