--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -12,3 +12,25 @@
 
     </div>
   </div>
+
+
+  <div class="row">
+
+    <div class="col-md-10 col-md-offset-1">
+      <h3 class="text-center">Découvrez nos 3 derniers jeux vedettes !</h3>
+
+      <div *ngFor="let game of games | slice:0:3">
+
+        <div class="col-md-4">
+          <a class="text-center" href="" [routerLink]="['/les-jeux', game.id]">
+            <img class="img-responsive img-thumbnail center-block" [src]="games[game.id - 1].cover.url">
+            <h4>{{game.name}}</h4>
+          </a>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+</div>
