--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
-
 <footer class="footer">
-      <div class="container">
-        <p class="text-muted">Place sticky footer content here.</p>
-      </div>
-    </footer>
+  <hr>
+  <div class="container">
+    <p id="text-muted">Copyright Steam 2017. All rights reserved.</p>
+  </div>
+</footer>
