--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,14 +7,14 @@
 	                <span class="icon-bar"></span>
 	                <span class="icon-bar"></span>
 	            </button>
-		            <a class="navbar-brand" href="index.php">
+		            <a href="" [routerLink]="['/']" class="navbar-brand">
 		            	<img alt="Logo" src="assets/logo.png">
 		            </a>
 	        </div>
 
 	        <div id="navbarCollapse" class="collapse navbar-collapse">
 	            <ul class="nav navbar-nav">
-       	 				<li><a href="app/biblio/biblio.component.html">Bibliothèque</a></li>
+       	 				<li><a href="" [routerLink]="['/les-jeux']">Bibliothèque</a></li>
 			      </ul>
 		     </div>
        </nav>
