--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,14 +1,4 @@
-.footer {
-    position: absolute;
-    bottom: 0px;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background-color: #f5f5f5;
-}
-.container .text-muted {
-    margin: 20px 0;
-}
-.text-muted {
-    color: #777;
+footer {
+  line-height: 30px;
+  text-align: center;
 }
