--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,8 @@
 <footer class="footer">
+   <div class="col-md-12">
   <hr>
   <div class="container">
-    <p id="text-muted">Copyright Steam 2017. All rights reserved.</p>
+    <p id="text-muted">© 2017 Steam. Tous droits réservés. Les marques citées sont la propriété de leurs détenteurs respectifs, aux États-Unis et dans d'autres pays..</p>
+  </div>
   </div>
 </footer>
