--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -17,7 +17,8 @@
   <div class="row">
 
     <div class="col-md-10 col-md-offset-1">
-      <h3 class="text-center">Découvrez nos 3 derniers jeux vedettes !</h3>
+      <h3 class="text-center">Le Top 3 des meilleurs vente !</h3>
+      <br>
 
       <div *ngFor="let game of games | slice:0:3">
 
