--- a/src/app/biblio/biblio.component.html
+++ b/src/app/biblio/biblio.component.html
@@ -3,10 +3,11 @@
 
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <form (submit)="searchGame($event);">
+      <form  class = "inline-form" (submit)="searchGame($event);">
         <div class="form-group">
-          <input class="form-control" type="text" [(ngModel)]="search" name="research"
+          <input class="form-control" type="search" [(ngModel)]="search" name="research"
                  placeholder="Entrez votre recherche..."/>
+          <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span></button>
         </div>
       </form>
       <p class="text-center"><em>Tapez le nom d'une catégorie ou d'un jeu...</em></p>
@@ -16,13 +17,13 @@
     <div class="row result-row">
     <div *ngIf="searchCatResult" class="col-md-6 cat-search">
       <h4 class="text-center">Catégorie:</h4>
-
       <p *ngFor="let cat of searchCatResult">
         {{cat.name}} -
         <a href="" [routerLink]="['/les-jeux', cat.id]">En savoir plus</a>
 
       </p>
     </div>
+
  <div class="col-md-6" *ngIf="searchResult">
       <h4 class="text-center">Nom:</h4>
       <p *ngFor="let result of searchResult">
@@ -38,19 +39,14 @@
   <div class="text-center">
 
     <hr>
-    <div class="col-md-12">
-
       <h4>Liste de jeux :</h4>
-
-<table class="table">
-
-        <thead>
-
-
-
-        </thead>
+      <br>
+      
+      <div class="col-md-6 col-md-offset-4">
 
         <tbody *ngFor="let game of games">
+
+        <table class="table table-striped table-hover">
 
         <tr>
           <td><a href="" [routerLink]="['/les-jeux', game.id]">{{game.name}}</a></td>
@@ -58,8 +54,8 @@
         </tr>
 
         </tbody>
-
+        
       </table>
 
-</div>
+
 </div>
