--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-		 <nav role="navigation" class="navbar navbar-inverse">
+		 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	        <div class="navbar-header">
 	            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
 	                <span class="sr-only">Toggle navigation</span>
@@ -14,7 +14,7 @@
 
 	        <div id="navbarCollapse" class="collapse navbar-collapse">
 	            <ul class="nav navbar-nav">
-       	 				<li><a href="" [routerLink]="['/les-jeux']">Bibliothèque</a></li>
+       	 				<li><a href="" [routerLink]="['/les-jeux']">BIBLIOTHÈQUE</a></li>
 			      </ul>
 		     </div>
        </nav>
